--- a/tv_add/index.html
+++ b/tv_add/index.html
@@ -7,9 +7,33 @@
   <style>
     *{box-sizing:border-box;margin:0;padding:0}
     html,body{height:100%;font-family:Segoe UI,Roboto,Arial,sans-serif;background:#000;color:#fff}
-    header{background:linear-gradient(135deg,#2563eb,#1e40af);color:#fff;padding:2rem 1.5rem;text-align:center}
-    h1{font-size:3rem}
-    .price-banner{background:#3b82f6;color:#fff;padding:1.6rem;text-align:center;font-weight:700}
+    header{
+      background:linear-gradient(135deg,#2563eb,#1e40af);
+      color:#fff;
+      padding:2rem 1.5rem 1rem 1.5rem;
+      text-align:center;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:center;
+    }
+    h1{
+      font-size:3rem;
+      font-weight:800;
+      letter-spacing:-1px;
+      line-height:1.1;
+    }
+    .telefono {
+      font-size:2.2rem;
+      margin-top:1rem;
+      font-weight:600;
+      letter-spacing:1px;
+      color:#fff;
+      text-shadow:0 2px 6px #2228;
+    }
+    .price-banner{
+      background:#3b82f6;color:#fff;padding:1.6rem;text-align:center;font-weight:700
+    }
     .main-content{padding:1rem;display:flex;flex-direction:column;gap:1rem;flex:1}
     .carousel-container{width:100%;height:80vh;border-radius:8px;overflow:hidden;position:relative;background:#000}
     .carousel{width:100%;height:100%;position:relative}
@@ -20,19 +44,51 @@
     .carousel-dot{width:12px;height:12px;border-radius:50%;background:rgba(255,255,255,0.35);border:2px solid rgba(0,0,0,0.2);cursor:pointer}
     .carousel-dot.active{background:#fff;transform:scale(1.2);box-shadow:0 0 8px rgba(255,255,255,0.9)}
     .loading{display:flex;align-items:center;justify-content:center;color:#ddd;font-size:1.1rem;height:100%}
-    /* Debug panel */
     #debugPanel{
       position:fixed; right:12px; top:12px; background:rgba(0,0,0,0.6); color:#fff; padding:10px; border-radius:8px; z-index:9999;
       font-size:12px; max-width:320px; max-height:60vh; overflow:auto;
     }
     #debugPanel h4{margin:0 0 .5rem;font-size:13px}
+
+    /* Mejoras para pantalla vertical */
+    @media (orientation: portrait) {
+      header {
+        padding-top: 7vw;
+        padding-bottom: 5vw;
+      }
+      h1 {
+        font-size:5vw;
+      }
+      .telefono {
+        font-size:3vw;
+        margin-top:2vw;
+      }
+      .price-banner {
+        font-size:3vw;
+        padding: 4vw 2vw;
+      }
+      .main-content {
+        padding-top:2vw;
+        padding-bottom:2vw;
+        gap:2vw;
+      }
+      .carousel-container {
+        height:88vh;
+      }
+      .carousel-slide img {
+        object-fit:contain;
+        background:#222;
+      }
+      .carousel-controls {
+        bottom:3vw;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>Alquiler de Consulta Sanitaria</h1>
-    <p style="opacity:.95">CENTRO SANITARIO LARRABIDE 
-      TEF: 643 85 68 07</p>
+    <h1>Centro Sanitario Larrabide</h1>
+    <div class="telefono">TEF: 643 85 68 07</div>
   </header>
 
   <div class="price-banner">Alquila tu consulta — desde 180€/mes</div>
@@ -52,7 +108,6 @@
   </div>
 
   <script>
-    // Lista de imágenes EXACTAS que están subidas (según repo)
     const images = [
       "consulta2.jpeg","consulta3.jpeg","consulta4.jpeg","consulta5.jpeg","consulta6.jpeg",
       "consulta7.jpeg","consulta8.jpeg","consulta9.jpeg","consulta10.jpeg","consulta11.jpeg",
@@ -60,33 +115,23 @@
       "pasillo.jpeg","pasillo2.jpeg","pasillo3.jpeg","pasillo4.jpeg",
       "salaespera2.jpeg","salaespera3.jpeg"
     ];
-
     const carousel = document.getElementById('carousel');
     const controls = document.getElementById('carouselControls');
     const loading = document.getElementById('loading');
     const debugPanel = document.getElementById('debugPanel');
     const debugContent = document.getElementById('debugContent');
-
     let current = 0;
     let intervalId;
-
-    // Calcular basePath según la URL actual (asegura que las rutas relativas apunten a /tv_add/)
     function getBasePath(){
-      // location.pathname por ejemplo: /tv_add/ o /user/repo/tv_add/
       const path = location.pathname;
-      // Si termina en '/', base = path; si termina en 'index.html', quitarlo.
       if(path.endsWith('/')) return path;
       return path.substring(0, path.lastIndexOf('/') + 1);
     }
     const basePath = getBasePath();
-
-    // Mostrar panel debug (visible)
     function showDebug(lines){
       debugPanel.style.display = 'block';
       debugContent.innerHTML = lines.map(l => `<div>${l}</div>`).join('');
     }
-
-    // Comprueba si cada imagen existe (preload) y devuelve solo las válidas
     function filterExistingImages(list, cb){
       const normalized = list.map(name => ({ src: name })).filter(Boolean);
       if(normalized.length === 0) return cb([]);
@@ -97,11 +142,9 @@
         const tester = new Image();
         tester.onload = () => { valid.push(item); checked++; if(checked === normalized.length) cb(valid, missing); };
         tester.onerror = () => { missing.push(item.src); checked++; if(checked === normalized.length) cb(valid, missing); };
-        // Usa ruta absoluta basada en basePath para evitar problemas de resolución
         tester.src = basePath + item.src;
       });
     }
-
     function buildSlides(validImages){
       carousel.innerHTML = '';
       controls.innerHTML = '';
@@ -109,21 +152,16 @@
         carousel.innerHTML = '<div class="loading">No hay imágenes disponibles.</div>';
         return;
       }
-
       validImages.forEach((imgObj, i) => {
         const slide = document.createElement('div');
         slide.className = 'carousel-slide' + (i === 0 ? ' active' : '');
-
         const wrapper = document.createElement('div');
         wrapper.style.width = '100%';
         wrapper.style.height = '100%';
-
         const img = document.createElement('img');
-        // usa basePath + src
         img.src = basePath + imgObj.src;
         img.alt = imgObj.src.replace(/[-_\.]/g,' ').replace(/\bjpeg\b|\bjpg\b/gi,'').replace(/\d+/g,'').trim() || 'Imagen';
         img.loading = i === 0 ? 'eager' : 'lazy';
-
         img.onerror = function(){
           console.warn('Imagen no encontrada (en build):', img.src);
           this.style.display = 'none';
@@ -132,22 +170,18 @@
           err.textContent = 'Imagen no disponible';
           slide.appendChild(err);
         };
-
         wrapper.appendChild(img);
         slide.appendChild(wrapper);
         carousel.appendChild(slide);
-
         const dot = document.createElement('span');
         dot.className = 'carousel-dot' + (i===0 ? ' active' : '');
         dot.dataset.index = i;
         dot.addEventListener('click', () => showSlide(i));
         controls.appendChild(dot);
       });
-
       if(loading) loading.style.display = 'none';
       startAutoplay();
     }
-
     function showSlide(n){
       const slides = document.querySelectorAll('.carousel-slide');
       const dots = document.querySelectorAll('.carousel-dot');
@@ -158,15 +192,10 @@
       slides[current].classList.add('active');
       dots[current].classList.add('active');
     }
-
     function nextSlide(){ showSlide(current + 1); }
-
     function startAutoplay(){ stopAutoplay(); intervalId = setInterval(nextSlide, 5000); }
     function stopAutoplay(){ if(intervalId) clearInterval(intervalId); }
-
-    // Inicializar: pre-filtrar imágenes y luego construir slides
     filterExistingImages(images, function(valid, missing){
-      // Mostrar debug en consola y panel
       console.log('Imágenes válidas:', valid.map(v=>v.src));
       console.log('Imágenes faltantes:', missing);
       showDebug([
@@ -177,12 +206,8 @@
       ]);
       buildSlides(valid);
     });
-
-    // Pausar autoplay al interactuar
     carousel.addEventListener('mouseenter', stopAutoplay);
     carousel.addEventListener('mouseleave', startAutoplay);
-
-    // Saver overlay (fade a negro) cada 5 minutos
     const overlay = document.createElement('div');
     overlay.style.position = 'fixed';
     overlay.style.inset = '0';
