--- a/tv_add/index.html
+++ b/tv_add/index.html
@@ -32,7 +32,16 @@
       text-shadow:0 2px 6px #2228;
     }
     .price-banner{
-      background:#3b82f6;color:#fff;padding:1.6rem;text-align:center;font-weight:700
+      background:#3b82f6;
+      color:#fff;
+      text-align:center;
+      font-weight:700;
+      padding: 2rem 1rem;
+      font-size: 2.8rem;
+      letter-spacing:1px;
+      margin-bottom:1rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 20px #1116;
     }
     .main-content{padding:1rem;display:flex;flex-direction:column;gap:1rem;flex:1}
     .carousel-container{width:100%;height:80vh;border-radius:8px;overflow:hidden;position:relative;background:#000}
@@ -44,11 +53,6 @@
     .carousel-dot{width:12px;height:12px;border-radius:50%;background:rgba(255,255,255,0.35);border:2px solid rgba(0,0,0,0.2);cursor:pointer}
     .carousel-dot.active{background:#fff;transform:scale(1.2);box-shadow:0 0 8px rgba(255,255,255,0.9)}
     .loading{display:flex;align-items:center;justify-content:center;color:#ddd;font-size:1.1rem;height:100%}
-    #debugPanel{
-      position:fixed; right:12px; top:12px; background:rgba(0,0,0,0.6); color:#fff; padding:10px; border-radius:8px; z-index:9999;
-      font-size:12px; max-width:320px; max-height:60vh; overflow:auto;
-    }
-    #debugPanel h4{margin:0 0 .5rem;font-size:13px}
 
     /* Mejoras para pantalla vertical */
     @media (orientation: portrait) {
@@ -64,8 +68,9 @@
         margin-top:2vw;
       }
       .price-banner {
-        font-size:3vw;
-        padding: 4vw 2vw;
+        font-size:7vw;
+        padding: 5vw 2vw;
+        margin-bottom: 3vw;
       }
       .main-content {
         padding-top:2vw;
@@ -102,11 +107,6 @@
     </div>
   </div>
 
-  <div id="debugPanel" aria-hidden="false" role="status" aria-live="polite" style="display:none">
-    <h4>Debug de imágenes</h4>
-    <div id="debugContent">Comprobando…</div>
-  </div>
-
   <script>
     const images = [
       "consulta2.jpeg","consulta3.jpeg","consulta4.jpeg","consulta5.jpeg","consulta6.jpeg",
@@ -118,8 +118,6 @@
     const carousel = document.getElementById('carousel');
     const controls = document.getElementById('carouselControls');
     const loading = document.getElementById('loading');
-    const debugPanel = document.getElementById('debugPanel');
-    const debugContent = document.getElementById('debugContent');
     let current = 0;
     let intervalId;
     function getBasePath(){
@@ -128,10 +126,6 @@
       return path.substring(0, path.lastIndexOf('/') + 1);
     }
     const basePath = getBasePath();
-    function showDebug(lines){
-      debugPanel.style.display = 'block';
-      debugContent.innerHTML = lines.map(l => `<div>${l}</div>`).join('');
-    }
     function filterExistingImages(list, cb){
       const normalized = list.map(name => ({ src: name })).filter(Boolean);
       if(normalized.length === 0) return cb([]);
@@ -163,7 +157,6 @@
         img.alt = imgObj.src.replace(/[-_\.]/g,' ').replace(/\bjpeg\b|\bjpg\b/gi,'').replace(/\d+/g,'').trim() || 'Imagen';
         img.loading = i === 0 ? 'eager' : 'lazy';
         img.onerror = function(){
-          console.warn('Imagen no encontrada (en build):', img.src);
           this.style.display = 'none';
           const err = document.createElement('div');
           err.className = 'loading';
@@ -196,14 +189,6 @@
     function startAutoplay(){ stopAutoplay(); intervalId = setInterval(nextSlide, 5000); }
     function stopAutoplay(){ if(intervalId) clearInterval(intervalId); }
     filterExistingImages(images, function(valid, missing){
-      console.log('Imágenes válidas:', valid.map(v=>v.src));
-      console.log('Imágenes faltantes:', missing);
-      showDebug([
-        `<strong>basePath:</strong> ${basePath}`,
-        `<strong>cargadas:</strong> ${valid.length}`,
-        `<strong>faltan:</strong> ${missing.length}`,
-        missing.length ? `<em>Faltan:</em> ${missing.join(', ')}` : 'Todas las imágenes disponibles'
-      ]);
       buildSlides(valid);
     });
     carousel.addEventListener('mouseenter', stopAutoplay);
