Enhance styles for header and responsive design
Updated styles for header, h1, telefono, and price-banner elements. Adjusted media query styles for portrait orientation.

--- a/tv_add/index.html
+++ b/tv_add/index.html
@@ -10,7 +10,7 @@
     header{
       background:linear-gradient(135deg,#2563eb,#1e40af);
       color:#fff;
-      padding:2rem 1.5rem 1rem 1.5rem;
+      padding:3rem 1.5rem 2rem 1.5rem;
       text-align:center;
       display:flex;
       flex-direction:column;
@@ -18,18 +18,21 @@
       justify-content:center;
     }
     h1{
-      font-size:3rem;
-      font-weight:800;
+      font-size:4rem;
+      font-weight:900;
       letter-spacing:-1px;
       line-height:1.1;
+      text-transform:uppercase;
+      margin-bottom:0.8rem;
+      text-shadow:0 2px 8px #111a;
     }
     .telefono {
-      font-size:2.2rem;
+      font-size:2.8rem;
       margin-top:1rem;
-      font-weight:600;
-      letter-spacing:1px;
+      font-weight:700;
+      letter-spacing:2px;
       color:#fff;
-      text-shadow:0 2px 6px #2228;
+      text-shadow:0 2px 8px #222a;
     }
     .price-banner{
       background:#3b82f6;
@@ -37,8 +40,8 @@
       text-align:center;
       font-weight:700;
       padding: 2rem 1rem;
-      font-size: 2.8rem;
-      letter-spacing:1px;
+      font-size: 3.2rem;
+      letter-spacing:2px;
       margin-bottom:1rem;
       border-radius: 8px;
       box-shadow: 0 2px 20px #1116;
@@ -54,23 +57,23 @@
     .carousel-dot.active{background:#fff;transform:scale(1.2);box-shadow:0 0 8px rgba(255,255,255,0.9)}
     .loading{display:flex;align-items:center;justify-content:center;color:#ddd;font-size:1.1rem;height:100%}
 
-    /* Mejoras para pantalla vertical */
     @media (orientation: portrait) {
       header {
-        padding-top: 7vw;
-        padding-bottom: 5vw;
+        padding-top: 9vw;
+        padding-bottom: 8vw;
       }
       h1 {
-        font-size:5vw;
+        font-size:6vw;
+        margin-bottom:2vw;
       }
       .telefono {
-        font-size:3vw;
-        margin-top:2vw;
+        font-size:4vw;
+        margin-top:3vw;
       }
       .price-banner {
         font-size:7vw;
         padding: 5vw 2vw;
-        margin-bottom: 3vw;
+        margin-bottom: 4vw;
       }
       .main-content {
         padding-top:2vw;
