--- a/tv_add/index.html
+++ b/tv_add/index.html
@@ -6,7 +6,13 @@
   <title>Alquiler Consulta Sanitaria - TV Display</title>
   <style>
     *{box-sizing:border-box;margin:0;padding:0}
-    html,body{height:100%;font-family:Segoe UI,Roboto,Arial,sans-serif;background:#000;color:#fff}
+    html,body{
+      height:100%;
+      font-family:Segoe UI,Roboto,Arial,sans-serif;
+      background:#000;
+      color:#fff;
+      overflow:hidden;
+    }
     header{
       background:linear-gradient(135deg,#2563eb,#1e40af);
       color:#fff;
@@ -47,7 +53,7 @@
       box-shadow: 0 2px 20px #1116;
     }
     .main-content{padding:1rem;display:flex;flex-direction:column;gap:1rem;flex:1}
-    .carousel-container{width:100%;height:80vh;border-radius:8px;overflow:hidden;position:relative;background:#000}
+    .carousel-container{width:100%;height:65vh;border-radius:8px;overflow:hidden;position:relative;background:#000}
     .carousel{width:100%;height:100%;position:relative}
     .carousel-slide{position:absolute;inset:0;opacity:0;transition:opacity 1s ease-in-out;display:flex;align-items:center;justify-content:center;background:#000}
     .carousel-slide.active{opacity:1}
@@ -56,7 +62,6 @@
     .carousel-dot{width:12px;height:12px;border-radius:50%;background:rgba(255,255,255,0.35);border:2px solid rgba(0,0,0,0.2);cursor:pointer}
     .carousel-dot.active{background:#fff;transform:scale(1.2);box-shadow:0 0 8px rgba(255,255,255,0.9)}
     .loading{display:flex;align-items:center;justify-content:center;color:#ddd;font-size:1.1rem;height:100%}
-
     @media (orientation: portrait) {
       header {
         padding-top: 9vw;
@@ -81,7 +86,7 @@
         gap:2vw;
       }
       .carousel-container {
-        height:88vh;
+        height:65vh;
       }
       .carousel-slide img {
         object-fit:contain;
