Update WhatsApp link with new predefined message

--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -196,9 +196,9 @@
                 Horario: Lunes a Viernes de 9:00 a 20:00h
             </p>
 
-            <!-- Botón de WhatsApp añadido debajo del teléfono -->
+            <!-- Botón de WhatsApp añadido debajo del teléfono (mensaje predefinido actualizado) -->
             <p style="margin-top:1rem;">
-                <a href="https://wa.me/34643856807?text=Hola%2C%20estoy%20interesado%20en%20alquilar%20una%20consulta." target="_blank" rel="noopener noreferrer" class="btn-whatsapp" aria-label="Contactar por WhatsApp">💬 WhatsApp</a>
+                <a href="https://wa.me/34643856807?text=Hola%2C%20estoy%20interesado%2Fa%20en%20alquilar%20una%20consulta." target="_blank" rel="noopener noreferrer" class="btn-whatsapp" aria-label="Contactar por WhatsApp">💬 WhatsApp</a>
             </p>
         </section>
     </main>
