--- a/tv_add/index.html
+++ b/tv_add/index.html
@@ -62,6 +62,47 @@
     .carousel-dot{width:12px;height:12px;border-radius:50%;background:rgba(255,255,255,0.35);border:2px solid rgba(0,0,0,0.2);cursor:pointer}
     .carousel-dot.active{background:#fff;transform:scale(1.2);box-shadow:0 0 8px rgba(255,255,255,0.9)}
     .loading{display:flex;align-items:center;justify-content:center;color:#ddd;font-size:1.1rem;height:100%}
+
+    .info-extra {
+      background: #111c;
+      border-radius: 8px;
+      margin-top: 2rem;
+      padding: 2rem 1rem;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      gap: 2.5rem;
+      font-size: 2.2rem;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+    }
+    .info-extra h2 {
+      font-size: 2.6rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+      color: #3b82f6;
+    }
+    .info-extra ul {
+      list-style: none; padding-left: 0;
+    }
+    .info-extra li {
+      font-size: 2rem;
+      margin: 0.5rem 0;
+    }
+    .qr-contacto img {
+      margin-bottom: .8rem;
+      border-radius: 6px;
+      box-shadow: 0 0 8px #2226;
+    }
+    .direccion img {
+      max-width: 100%;
+      height: auto;
+      margin: 1rem 0;
+      border-radius: 8px;
+      box-shadow: 0 0 8px #2224;
+    }
+
     @media (orientation: portrait) {
       header {
         padding-top: 10vw;
@@ -95,6 +136,19 @@
       .carousel-controls {
         bottom:3vw;
       }
+      .info-extra {
+        margin-top:5vw;
+        padding:6vw 2vw;
+        font-size:4vw;
+        gap:5vw;
+      }
+      .info-extra h2 {
+        font-size:5vw;
+      }
+      .qr-contacto img {
+        width:18vw;
+        height:18vw;
+      }
     }
   </style>
 </head>
@@ -113,6 +167,33 @@
       </div>
       <div class="carousel-controls" id="carouselControls" aria-hidden="true"></div>
     </div>
+
+    <!-- Bloque informativo agregado debajo del carrusel -->
+    <div class="info-extra">
+      <div class="services">
+        <h2>Especialidades</h2>
+        <p>Espacios versátiles para cualquier especialidad sanitaria.</p>
+        <p>Consulta para profesionales de la salud: medicina, terapia, psicología… y más.</p>
+      </div>
+      <div class="horario">
+        <h2>Horario</h2>
+        <p>Lunes a viernes: 8:00 - 20:00</p>
+        <p>Sábados: 9:00 - 14:00</p>
+      </div>
+      <div class="direccion">
+        <h2>Ubicación</h2>
+        <p>Calle Larrabide 10, Pamplona</p>
+        <!-- Reemplaza "mapa_estatico.png" por la imagen real de tu mapa -->
+        <img src="mapa_estatico.png" alt="Mapa estático">
+      </div>
+      <div class="qr-contacto" style="text-align:center; margin-top:1.5rem;">
+        <!-- Reemplaza "qr_contacto.png" por la imagen real de tu QR -->
+        <img src="qr_contacto.png" alt="QR para contacto" style="width:120px;height:120px;">
+        <br>
+        <span style="font-size:1.4rem;">Reserva fácilmente: escanea el QR</span>
+      </div>
+    </div>
+    <!-- Fin del bloque informativo -->
   </div>
 
   <script>
