Update location and QR code details in index.html

--- a/tv_add/index.html
+++ b/tv_add/index.html
@@ -95,13 +95,6 @@
       border-radius: 6px;
       box-shadow: 0 0 8px #2226;
     }
-    .direccion img {
-      max-width: 100%;
-      height: auto;
-      margin: 1rem 0;
-      border-radius: 8px;
-      box-shadow: 0 0 8px #2224;
-    }
 
     @media (orientation: portrait) {
       header {
@@ -168,7 +161,7 @@
       <div class="carousel-controls" id="carouselControls" aria-hidden="true"></div>
     </div>
 
-    <!-- Bloque informativo agregado debajo del carrusel -->
+    <!-- Bloque informativo con la imagen QR -->
     <div class="info-extra">
       <div class="services">
         <h2>Especialidades</h2>
@@ -182,15 +175,12 @@
       </div>
       <div class="direccion">
         <h2>Ubicación</h2>
-        <p>Calle Larrabide 10, Pamplona</p>
-        <!-- Reemplaza "mapa_estatico.png" por la imagen real de tu mapa -->
-        <img src="mapa_estatico.png" alt="Mapa estático">
+        <p>Larrabide 3, Pamplona</p>
       </div>
       <div class="qr-contacto" style="text-align:center; margin-top:1.5rem;">
-        <!-- Reemplaza "qr_contacto.png" por la imagen real de tu QR -->
-        <img src="qr_contacto.png" alt="QR para contacto" style="width:120px;height:120px;">
+        <img src="qr-code.png" alt="QR para WhatsApp" style="width:120px;height:120px;">
         <br>
-        <span style="font-size:1.4rem;">Reserva fácilmente: escanea el QR</span>
+        <span style="font-size:1.4rem;">Contacta o reserva fácilmente: escanea el QR (WhatsApp)</span>
       </div>
     </div>
     <!-- Fin del bloque informativo -->
