--- a/tv_add/index.html
+++ b/tv_add/index.html
@@ -24,33 +24,33 @@
       justify-content:center;
     }
     h1{
-      font-size:5rem;
+      font-size:6rem;
       font-weight:900;
       letter-spacing:-1px;
       line-height:1.1;
       text-transform:uppercase;
-      margin-bottom:1.2rem;
-      text-shadow:0 2px 10px #111a;
+      margin-bottom:1.5rem;
+      text-shadow:0 2px 12px #111a;
     }
     .telefono {
-      font-size:3.5rem;
-      margin-top:1.2rem;
+      font-size:4rem;
+      margin-top:1.5rem;
       font-weight:700;
       letter-spacing:2px;
       color:#fff;
-      text-shadow:0 2px 10px #222a;
+      text-shadow:0 2px 12px #222a;
     }
     .price-banner{
       background:#3b82f6;
       color:#fff;
       text-align:center;
       font-weight:700;
-      padding: 2.1rem 1rem;
-      font-size: 3.7rem;
+      padding: 2.5rem 1.2rem;
+      font-size: 4rem;
       letter-spacing:2px;
-      margin-bottom:1.2rem;
+      margin-bottom:1.5rem;
       border-radius: 8px;
-      box-shadow: 0 2px 20px #1116;
+      box-shadow: 0 2px 24px #1116;
     }
     .main-content{padding:1rem;display:flex;flex-direction:column;gap:1rem;flex:1}
     .carousel-container{width:100%;height:65vh;border-radius:8px;overflow:hidden;position:relative;background:#000}
@@ -58,89 +58,106 @@
     .carousel-slide{position:absolute;inset:0;opacity:0;transition:opacity 1s ease-in-out;display:flex;align-items:center;justify-content:center;background:#000}
     .carousel-slide.active{opacity:1}
     .carousel-slide img{width:100%;height:100%;object-fit:cover;display:block}
-    .carousel-controls{position:absolute;bottom:14px;left:50%;transform:translateX(-50%);display:flex;gap:8px;z-index:20}
-    .carousel-dot{width:12px;height:12px;border-radius:50%;background:rgba(255,255,255,0.35);border:2px solid rgba(0,0,0,0.2);cursor:pointer}
-    .carousel-dot.active{background:#fff;transform:scale(1.2);box-shadow:0 0 8px rgba(255,255,255,0.9)}
-    .loading{display:flex;align-items:center;justify-content:center;color:#ddd;font-size:1.1rem;height:100%}
+    .carousel-controls{position:absolute;bottom:20px;left:50%;transform:translateX(-50%);display:flex;gap:12px;z-index:20}
+    .carousel-dot{width:16px;height:16px;border-radius:50%;background:rgba(255,255,255,0.35);border:2px solid rgba(0,0,0,0.2);cursor:pointer}
+    .carousel-dot.active{background:#fff;transform:scale(1.3);box-shadow:0 0 12px rgba(255,255,255,0.9)}
+    .loading{display:flex;align-items:center;justify-content:center;color:#ddd;font-size:1.5rem;height:100%}
 
     .info-extra {
       background: #111c;
       border-radius: 8px;
-      margin-top: 2rem;
-      padding: 2rem 1rem;
+      margin-top: 2.5rem;
+      padding: 2.7rem 1rem;
       color: #fff;
       display: flex;
       flex-direction: column;
-      gap: 2.5rem;
-      font-size: 2.2rem;
+      gap: 3rem;
+      font-size: 3.3rem;
       text-align: center;
       align-items: center;
       justify-content: center;
     }
     .info-extra h2 {
-      font-size: 2.6rem;
+      font-size: 4rem;
       font-weight: 700;
-      margin-bottom: 1rem;
+      margin-bottom: 1.2rem;
       color: #3b82f6;
     }
     .info-extra ul {
       list-style: none; padding-left: 0;
     }
     .info-extra li {
-      font-size: 2rem;
+      font-size: 3rem;
       margin: 0.5rem 0;
     }
     .qr-contacto img {
       margin-bottom: .8rem;
       border-radius: 6px;
-      box-shadow: 0 0 8px #2226;
+      box-shadow: 0 0 12px #2226;
+      width: 220px;
+      height: 220px;
+      max-width: 45vw;
+      max-height: 45vw;
+    }
+    .qr-contacto span {
+      font-size: 3rem;
+      font-weight: bold;
+      display: block;
+      margin-top: 1.2rem;
+      letter-spacing: 1px;
     }
 
     @media (orientation: portrait) {
       header {
-        padding-top: 10vw;
-        padding-bottom: 9vw;
+        padding-top: 8vw;
+        padding-bottom: 8vw;
       }
       h1 {
-        font-size:7vw;
-        margin-bottom:2.4vw;
+        font-size:10vw;
+        margin-bottom:5vw;
       }
       .telefono {
-        font-size:5vw;
-        margin-top:3vw;
+        font-size:7vw;
+        margin-top:4vw;
       }
       .price-banner {
-        font-size:8vw;
-        padding: 6vw 2vw;
-        margin-bottom: 5vw;
+        font-size:9vw;
+        padding: 5vw 2vw;
+        margin-bottom: 6vw;
       }
       .main-content {
-        padding-top:2vw;
-        padding-bottom:2vw;
-        gap:2vw;
+        padding-top:3vw;
+        padding-bottom:3vw;
+        gap:3vw;
       }
       .carousel-container {
-        height:65vh;
+        height:60vh;
       }
       .carousel-slide img {
         object-fit:contain;
         background:#222;
       }
       .carousel-controls {
-        bottom:3vw;
+        bottom:4vw;
       }
       .info-extra {
-        margin-top:5vw;
-        padding:6vw 2vw;
-        font-size:4vw;
-        gap:5vw;
+        margin-top:7vw;
+        padding:7vw 2vw;
+        font-size:7vw;
+        gap:7vw;
       }
       .info-extra h2 {
-        font-size:5vw;
+        font-size:8vw;
       }
       .qr-contacto img {
-        width:18vw;
-        height:18vw;
+        width:32vw;
+        height:32vw;
+        max-width:45vw;
+        max-height:45vw;
+      }
+      .qr-contacto span {
+        font-size:7vw;
+        margin-top:2vw;
       }
     }
   </style>
@@ -161,7 +178,7 @@
       <div class="carousel-controls" id="carouselControls" aria-hidden="true"></div>
     </div>
 
-    <!-- Bloque informativo con la imagen QR -->
+    <!-- Bloque informativo con la imagen QR en tamaño grande -->
     <div class="info-extra">
       <div class="services">
         <h2>Especialidades</h2>
@@ -178,9 +195,8 @@
         <p>Larrabide 3, Pamplona</p>
       </div>
       <div class="qr-contacto" style="text-align:center; margin-top:1.5rem;">
-        <img src="qr-code.png" alt="QR para WhatsApp" style="width:120px;height:120px;">
-        <br>
-        <span style="font-size:1.4rem;">Contacta o reserva fácilmente: escanea el QR (WhatsApp)</span>
+        <img src="qr-code.png" alt="QR para WhatsApp">
+        <span>Contacta o reserva fácilmente: escanea el QR (WhatsApp)</span>
       </div>
     </div>
     <!-- Fin del bloque informativo -->
